--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,33 @@ code {
 .italic {
   font-style: italic;
 }
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  align-self: center;
+  margin: 2rem;
+  }
+
+  .loader-animated {
+    animation: spin 2s linear infinite;
+    }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+    }
+
+    .card-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 300px;
+      height: 100px;
+      margin-bottom: 20px;
+      border: 1px solid #000000;
+    }
